added email verification + requires user to verify account before using pages in ACNAPI

--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -21,7 +21,8 @@ mixin header(title)
                 menubar: false,
                 height: 216,
                 branding: false,
-                plugins: "table link image codesample code fullscreen charmap",
+                placeholder: "Placeholder text",
+                plugins: "table link image codesample code fullscreen charmap placeholder",
                 a_configuration_option: 400,
                 autosave_interval: "20s",
 
