--- a/views/consultant.pug
+++ b/views/consultant.pug
@@ -30,13 +30,13 @@ head
         tr
           td
             a(href='https://www.linkedin.com/in/chelsea-foo-shu-qi/')
-              img(src='social-linkedin.svg' alt='Linkedin' width='38' height='38' style='display: block;' border='0')
+              img(src='/images/aboutConsultant/social-linkedin.svg' alt='Linkedin' width='38' height='38' style='display: block;' border='0')
           td
             a(href='https://www.instagram.com/accenture/?hl=en')
-              img(src='instagram.png' alt='Instagram' width='45' height='45' style='display: block;' border='0')
+              img(src='/images/aboutConsultant/instagram.png' alt='Instagram' width='45' height='45' style='display: block;' border='0')
           td
             a(href='https://www.facebook.com/accenture/')
-              img(src='social-facebook.svg' alt='Facebook' width='38' height='38' style='display: block;' border='0')
+              img(src='/images/aboutConsultant/social-facebook.svg' alt='Facebook' width='38' height='38' style='display: block;' border='0')
       hr.d-sm-none
     .col-sm-8
       h2 Bio
@@ -64,13 +64,13 @@ head
         tr
           td
             a(href='https://www.linkedin.com/in/peng-fei-hong-530896157/')
-              img(src='social-linkedin.svg' alt='Linkedin' width='38' height='38' style='display: block;' border='0')
+              img(src='/images/aboutConsultant/social-linkedin.svg' alt='Linkedin' width='38' height='38' style='display: block;' border='0')
           td
             a(href='https://www.instagram.com/accenture/?hl=en')
-              img(src='instagram.png' alt='Instagram' width='45' height='45' style='display: block;' border='0')
+              img(src='/images/aboutConsultant/instagram.png' alt='Instagram' width='45' height='45' style='display: block;' border='0')
           td
             a(href='https://www.facebook.com/accenture/')
-              img(src='social-facebook.svg' alt='Facebook' width='38' height='38' style='display: block;' border='0')
+              img(src='/images/aboutConsultant/social-facebook.svg' alt='Facebook' width='38' height='38' style='display: block;' border='0')
       hr.d-sm-none
     .col-sm-8
       h2 Bio
