select page pug

--- a/views/chat/select.pug
+++ b/views/chat/select.pug
@@ -20,17 +20,15 @@ section.section
     h2 Please select an person to serve you
     br
     |
-    for user in users
-      a(href='/chat/' + user.id)
+    for admin in admins
+      // use the id of the admin as the real time chat website address
+      a(href='/chat/' + admin.id) #{admin.name}
         img(src='../images/unnamed.jpg')
-  //- .nomessages
-  //-   img#noMessagesImage(src='../images/unnamed.jpg')
-  //-   .info
-  //-     h2
-  //-       | Please wait a while for our staff, we will be with you shortly
-  //-       span.nickname-chat
-  //-       | .
-  //-     h5 keep the website open, we will remind you when an admin enters
+    | 
+    h2 if you dont know any admin
+    .link
+      // TODO: add these routes
+      a#link(title='Chat with all the admin' href='/chat/all_admin' + user.id) Chat with all the admin
   footer
 //- footer
 script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js')
