--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -127,7 +127,7 @@ body {
 
 /* ------ Connected ------*/
 
-.connected {
+.selectadmin {
   text-align: center;
   display: block;
   margin: 0px auto;
@@ -138,7 +138,7 @@ body {
   box-shadow: 0px 3px 3px #e3e4e6;
   color: #637277;
 }
-.connected h2 {
+.selectadmin h2 {
   padding-top: 20px;
 }
 .infoConnected {
@@ -292,7 +292,7 @@ body {
   font-weight: normal;
   margin: 10px 0 35px;
 }
-.invite-textfield .link {
+.selectadmin .link {
   width: 600px;
   height: 35px;
   text-align: center;
@@ -303,7 +303,7 @@ body {
   border-radius: 4px;
   background-color: #f0f1f3;
 }
-.invite-textfield #link {
+.link #link {
   text-decoration: none;
   color: #637277;
 }
