--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -127,20 +127,7 @@ body {
 
 /* ------ Connected ------*/
 
-.selectadmin {
-  text-align: center;
-  display: block;
-  margin: 0px auto;
-  width: 700px;
-  height: 400px;
-  background-color: #ffffff;
-  border-radius: 3px;
-  box-shadow: 0px 3px 3px #e3e4e6;
-  color: #637277;
-}
-.selectadmin h2 {
-  padding-top: 20px;
-}
+
 .infoConnected {
   text-align: left;
   float: right;
@@ -604,4 +591,20 @@ footer {
   width: 700px;
   margin: 0 auto 200px;
   overflow: hidden;
+}
+
+/* ----------------- select admin ---------------*/
+.selectadmin {
+  text-align: center;
+  display: block;
+  margin: 0px auto;
+  width: 700px;
+  height: 400px;
+  background-color: #ffffff;
+  border-radius: 3px;
+  box-shadow: 0px 3px 3px #e3e4e6;
+  color: #637277;
+}
+.selectadmin h2 {
+  padding-top: 20px;
 }
