fix routes error

--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -26,7 +26,7 @@ section.section
   .toomanypeople
     h2 Oops, you can not join this chat!
     h5
-      | There are already two people in it. Would you like to create a
+      | There are already two people in it.
   .nomessages
     img#noMessagesImage(src='../images/unnamed.jpg')
     .info
