--- a/views/chat/select.pug
+++ b/views/chat/select.pug
@@ -22,7 +22,7 @@ section.section
     |
     for admin in admins
       // use the id of the admin as the real time chat website address
-      a(href='/chat/' + admin.userId) #{admin.firstName}
+      a(href='/chat/admin/' + admin.userId) #{admin.firstName}
         img(src='../images/unnamed.jpg')
     | 
     h2 if you dont know any admin
