--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -1,11 +1,7 @@
 doctype html
-//
-  This file is rendered by express.js, when the rurl /chat/123456 is visited in a browser.
-  It includes jQuery, socket.io.js (it is automatically served by the socket.io library),
-  and a few more JavaScript files that you should check out.
 head
   title Private chat room | Demo
-  link(type='text/css' rel='stylesheet' href='../stylesheets/stylesheet.css')
+  link(type='text/css' rel='stylesheet' href='/stylesheets/stylesheet.css')
   //- link(type='text/css' rel='stylesheet' href='/public/stylesheets/style.css')
   link(href='http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700' rel='stylesheet' type='text/css')
 header.banner
@@ -17,7 +13,7 @@ header.banner
 section.section
   // These elements are displayed as white info cards in the middle of the screen
   .left
-    img#leftImage(src='../images/unnamed.jpg')
+    img#leftImage(src='/images/unnamed.jpg')
     .info
       h2
         span.nickname-left
@@ -28,7 +24,7 @@ section.section
     h5
       | There are already two people in it.
   .nomessages
-    img#noMessagesImage(src='../images/unnamed.jpg')
+    img#noMessagesImage(src='/images/unnamed.jpg')
     .info
       h2
         | An email reminder has been sent to admin, we will be with you shortly
@@ -44,6 +40,6 @@ section.section
       input#submit(type='submit' value='SEND')
 //- footer
 script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-script(src='../javascripts/moment.min.js')
+script(src='/javascripts/moment.min.js')
 script(src='/socket.io/socket.io.js')
-script(src='../javascripts/chat.js')
+script(src='/javascripts/chat.js')
