added a forum thread kind of message. still a little bit buggy, gotta fix it soon!

--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -22,7 +22,9 @@ mixin header(title)
                 height: 216,
                 branding: false,
                 placeholder: "Placeholder text",
-                plugins: "table link image codesample code fullscreen charmap placeholder",
+                plugins: "table link image codesample code fullscreen charmap placeholder autoresize",
+                autoresize_bottom_margin: 15,
+                height: "15",
                 a_configuration_option: 400,
                 autosave_interval: "20s",
 
