--- a/views/ticket/ticket_form/details.pug
+++ b/views/ticket/ticket_form/details.pug
@@ -16,16 +16,16 @@ html(lang='en')
             form(action='/ticket_form/details',method='POST' )
               div.form-group
                 label(for='name') First Name:
-                input#name.form-control-plaintext(type='text', placeholder='e.g. David', name='firstName', value=user.firstName, readonly="readonly")
+                input#name.form-control(type='text', placeholder='e.g. David', name='firstName', value=user.firstName, readonly)
               div.form-group
                 label(for='name') Last Name:
-                input#name.form-control-plaintext(type='text', placeholder='e.g. Beckham', name='lastName', value=user.lastName, readonly="readonly")
+                input#name.form-control(type='text', placeholder='e.g. Beckham', name='lastName', value=user.lastName, readonly)
               div.form-group
                 label(for='email') Email:
-                input#email.form-control-plaintext(type='email', placeholder='name@email.com', name='email', value=user.email, readonly="readonly")
+                input#email.form-control(type='email', placeholder='name@email.com', name='email', value=user.email, readonly)
               div.form-group
                 label(for='phoneNumber') Phone Number:
-                input#phoneNumber.form-control-plaintext(type='text', placeholder='e.g. 91234567' name='phoneNumber', value=user.phoneNumber, readonly="readonly")
+                input#phoneNumber.form-control(type='text', placeholder='e.g. 91234567' name='phoneNumber', value=user.phoneNumber, readonly)
               div.form-group
                 label(for='priority') Bugs in ACNAPI found?:
                   input#priority.form-control.move-left(type='checkbox', name='priority')
@@ -35,12 +35,12 @@ html(lang='en')
                       box-shadow: none;
                     }
               div.form-group
-                label(for='topic') Topics:  &nbsp
-                select(multiple class = 'form-control' name='topic')
+                label(for='topic') Topics:
+                select(class = 'form-control' name='topic')
                   each topic in topics
                     option#topic.form-control(value=topic) #{topic}
                 br
-                br
+
                 label(for='priority') Subject:
                 input#title.form-control(type='text', placeholder='Give a very short summary! (i.e. about Python class)' name='title')
               div.form-group
