initial real time chat with specific user is done
Todos:
	1. admin pictures
	2. user name and admin names
	3. user pick all the admins
	4. user send email to admins

--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -25,7 +25,7 @@ section.section
       | There are already two people in it.
 
   .invite-textfield
-    h2 | An email reminder has been sent to admin, we will be with you shortly
+    h2 An email reminder has been sent to admin, we will be with you shortly
        | .
     h5 keep the website open, we will remind you when an admin enters
   .nomessages
