moved scripts to footer + added dropdown menu

--- a/views/common/footer.pug
+++ b/views/common/footer.pug
@@ -1,8 +1,33 @@
 mixin footer(footer)
-    script(src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous")    
+    script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
-    script(src="/javascripts/Tickets.js")
+    link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+    script(src="/tinymce/js/tinymce/tinymce.min.js")
+
+    script.
+        tinymce.init({
+            selector: '#content',
+            inline:  false,
+            toolbar: 'bold,italic,underline,|,undo,redo,|,justifyleft,justifycenter,justifyright|,image,table,|,fullscreen, codesample, code,|,alignleft aligncenter alignright alignjustify',
+            a_plugin_option: false,
+            menubar: false,
+            height: 216,
+            branding: false,
+            placeholder: "Placeholder text",
+            plugins: "table link image codesample code fullscreen charmap placeholder autoresize",
+            autoresize_bottom_margin: 15,
+            height: "15",
+            a_configuration_option: 400,
+            autosave_interval: "20s",
+
+            relative_urls: false,
+            remove_script_host: false,
+            images_upload_url: '/upload',
+            images_upload_base_path: "http://" + window.location.host
+            //- document_base_url: 'http://escgroup1.herokuapp.com/'
+        });
+
     
 
 
