--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -19,14 +19,17 @@ html(lang='en')
                       input(placeholder='e.g. jem_ng@hotmail.com',required=true, name='email',type='email',value=formData.email).form-control
                       if (errors && errors.email)
                         p#err_email.small.text-danger #{errors.email}
-                      label.small.mb-1.mt-3 First Name: 
-                      input(placeholder='e.g. Jeremy',required=true, name='firstName',type='text',value=formData.firstName).form-control
-                      if (errors && errors.firstName)
-                        p#err_firstName.small.text-danger #{errors.firstName}
-                      label.small.mb-1.mt-3 Last Name: 
-                      input(placeholder='e.g. Ng',required=true, name='lastName',type='text',value=formData.lastName).form-control
-                      if (errors && errors.lastName)
-                        p#err_lastName.small.text-danger #{errors.lastName}
+                      .form-row.mb-1
+                        .col
+                          label.small.mb-1.mt-3 First Name: 
+                          input(placeholder='e.g. Jeremy',required=true, name='firstName',type='text',value=formData.firstName).form-control
+                          if (errors && errors.firstName)
+                            p#err_firstName.small.text-danger #{errors.firstName}
+                        .col
+                          label.small.mb-1.mt-3 Last Name: 
+                          input(placeholder='e.g. Ng',required=true, name='lastName',type='text',value=formData.lastName).form-control
+                          if (errors && errors.lastName)
+                            p#err_lastName.small.text-danger #{errors.lastName}
                       label.small.mb-1.mt-3 Phone Number: 
                       input(placeholder='e.g. 91234567',required=true, name='phoneNumber',type='text',value=formData.phoneNumber).form-control
                       if (errors && errors.phoneNumber)
@@ -42,7 +45,13 @@ html(lang='en')
                       button.mt-3.btn.btn-primary(type='submit') Sign up
                       p.mt-2.mb-0 
                         | Already have an account? #[a(href="/users/login") Log in here].
-          
+                  hr
+                  // Terms of service
+                  p
+                    | By clicking
+                    em Sign up
+                    |  you agree to our
+                    a(href="" target="_blank") terms of service
     include ../common/footer.pug
     +footer()
     //- script(src="/javascripts/leads.js")
