--- a/views/users/change_password.pug
+++ b/views/users/change_password.pug
@@ -13,17 +13,12 @@ html(lang='en')
               h2.text-left Profile Page
               .row
                 .col-sm-12.col-md-12.col-xs-12
-                  if (errors && errors.inputs)
-                    p#err_inputs.text-danger #{errors.inputs}
                   form(action='/users/change_password', method='POST')
                     div.formgroup
-                      label.small.mb-1.mt-3 Old Password: 
-                      input(placeholder='Old Password',required=true, name='password', type='password',value='').form-control
-                      if (errors && errors.password)
-                        p#err_password.small.text-danger #{errors.wrong}
                       label.small.mb-1.mt-3 New Password:
                       input(placeholder='New Password',required=true, name='newPW', type='password',value='').form-control
-
+                      if (errors && errors.password)
+                        p#err_password.small.text-danger #{errors.password}
                       label.small.mb-1.mt-3 Confirm New Password:
                       input(placeholder='Confirm Password',required=true, name='newPW2', type='password',value='').form-control
                       if (errors && errors.password2)
