fix image issue

--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -47,4 +47,5 @@ section.section
 script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 script(src='/javascripts/moment.min.js')
 script(src='/socket.io/socket.io.js')
-script(src='/javascripts/chat.js')
+script(src='/javascripts/chat.js', type='text/javascript').
+  var user = #{user}
