--- a/views/chat/room.pug
+++ b/views/chat/room.pug
@@ -6,8 +6,6 @@ head
   title Accenture Private Chat | make your life efficient
   link(type='text/css' rel='stylesheet' href='stylesheets/stylesheet.css')
   link(href='http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700' rel='stylesheet' type='text/css')
-  //- include ../common/header.pug
-  //- +header("Creat a chat room!")
 header.homebanner
   h1.homebannertext
     a#logo(href='/')
@@ -18,7 +16,7 @@ header.homebanner
 section
   .homesection
     .node
-      img#nodelogo(src='images/accenture.png' alt='nodelogo')
+      img#nodelogo(src='/images/accenture.png' alt='accenture logo')
       h2#chat powered web chat
     a#create(title='Create' href='/select')
       #createbutton
