fix the picture adddress

--- a/views/chat/room.pug
+++ b/views/chat/room.pug
@@ -16,7 +16,7 @@ header.homebanner
 section
   .homesection
     .node
-      img#nodelogo(src='/images/accenture.png' alt='accenture logo')
+      img#nodelogo(src='/images/Accenture-logo.png' alt='accenture logo')
       h2#chat powered web chat
     a#create(title='Create' href='/select')
       #createbutton
