--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -26,18 +26,19 @@
 
 doctype html
 html(lang='en')
-
+  include common/header.pug
+  title=title
+  +header(title)
+  body
   head
-    title=title
     script(async src='https://www.googletagmanager.com/gtag/js?id=UA-138699201-1')
     script.
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-138699201-1');
-    include common/header.pug
-    +header(title)
-  body
+    include common/navbar.pug
+    +navbar(user)
     .container-fixed
       .bd-example
         include common/carousel.pug
