Added Google Analytics

--- a/views/users/change_email.pug
+++ b/views/users/change_email.pug
@@ -4,6 +4,12 @@ html(lang='en')
   +header(title)
   body
     header
+      script(async src='https://www.googletagmanager.com/gtag/js?id=UA-138699201-2')
+      script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-138699201-2');
     include ../common/navbar.pug
     +navbar(user)
     .container
