Added change_password feature + fixed some bug

--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -1,5 +1,6 @@
 mixin header(title)
     head
+        link(rel="icon" href="/images/favicon.ico")
         meta(charset='utf-8')
         title=title
         //[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunks/html5.js"></script><![endif]
