Changed Size of Carousell
Added JumboTron

--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -43,6 +43,14 @@ html(lang='en')
       .bd-example
         include common/carousel.pug
         +carousel()
+        .jumbotron
+          .container
+            h1.display-4 Welcome to ACNAPI's Helpdesk
+            p Log in to send us a ticket and our technical consultants will get back to you within 3 working days.
+            p: a.btn.btn-primary.btn-warning(href="/users/login" role="button") Log In &raquo;
+
+    include common/footer.pug
+    +footer()
     include common/footer.pug
     +footer()
     
